force-app/main/default/objects/Quote__c/fields/AcceptCounter__c.field-meta.xml
<CustomField>
    <fullName>AcceptCounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Counter</label>
    <type>Checkbox</type>
</CustomField>