force-app/main/default/objects/Quote__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes8</relationshipName>
    <type>Lookup</type>
</CustomField>