force-app/main/default/objects/Quote__c/fields/AcceptEscalatelink__c.field-meta.xml
<CustomField>
    <fullName>AcceptEscalatelink__c</fullName>
    <formula>HYPERLINK(&quot;../apex/acceptCounter?Id=&quot; &amp; Id , &quot;Accept Counter&quot;, &quot;_top&quot;)&amp; BR() &amp; 
HYPERLINK(&quot;../apex/EscalateCounter?Id=&quot; &amp; Id , &quot;Escalate&quot;, &quot;_top&quot;)</formula>
    <label>Action</label>
    <type>Text</type>
</CustomField>