force-app/main/default/objects/Quote__c/fields/Account_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_1__c</fullName>
    <label>Account Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>