force-app/main/default/objects/Quote__c/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Addendum</label>
    <length>18</length>
    <type>Text</type>
</CustomField>