force-app/main/default/objects/Quote__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <formula>HYPERLINK(&quot;../apex/VFP_CommunicationStream?Id=&quot; &amp; Id , &quot;SPD Notes (Required)&quot;, &quot;_blank&quot;)&amp; BR() &amp;
HYPERLINK(&quot;../apex/QuoteApprovalHistoryPage?Id=&quot; &amp; Id , &quot;Quote Level Approval Request (Optional)&quot;, &quot;_blank&quot;) &amp; BR()</formula>
    <label>Additional Information</label>
    <type>Text</type>
</CustomField>