force-app/main/default/objects/Quote__c/fields/Anytime_Status_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Anytime_Status_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anytime_Status_Authorized</label>
    <type>Checkbox</type>
</CustomField>