force-app/main/default/objects/Quote__c/fields/ApplyLogicStatusCodes__c.field-meta.xml
<CustomField>
    <fullName>ApplyLogicStatusCodes__c</fullName>
    <description>For internal use only. Delimited list of apply logic codes</description>
    <label>Apply Logic Status Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>