force-app/main/default/objects/Quote__c/fields/ArchiveAgreement__c.field-meta.xml
<CustomField>
    <fullName>ArchiveAgreement__c</fullName>
    <description>Stores Agreement__c reference Id which is used for Archiving Activity</description>
    <label>Archive Agreement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>