force-app/main/default/objects/Quote__c/fields/ArchiveClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>ArchiveClonedFrom__c</fullName>
    <description>Stores Cloned_from__c reference Id which is used for Archiving Activity</description>
    <label>Archive Cloned From</label>
    <length>18</length>
    <type>Text</type>
</CustomField>