force-app/main/default/objects/Quote__c/fields/ArchiveDialogId__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDialogId__c</fullName>
    <description>Stores Dialog_Id__c reference Id which is used for Archiving Activity</description>
    <label>Archive Dialog Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>