force-app/main/default/objects/Quote__c/fields/ArchiveDistributorProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDistributorProjectManager__c</fullName>
    <description>Stores Distributor_Project_Manager__c reference Id which is used for Archiving Activity</description>
    <label>Archive Distributor Project Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>