force-app/main/default/objects/Quote__c/fields/ArchiveDistributorSalesEngineer__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDistributorSalesEngineer__c</fullName>
    <description>Stores Distributor_Sales_Engineer__c reference Id which is used for Archiving Activity</description>
    <label>Archive Distributor Sales Engineer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>