force-app/main/default/objects/Quote__c/fields/ArchiveDrawloopConsultantSpecifier__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDrawloopConsultantSpecifier__c</fullName>
    <description>Stores Drawloop_Consultant_Specifier__c reference Id which is used for Archiving Activity</description>
    <label>Archive Drawloop Consultant Specifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>