force-app/main/default/objects/Quote__c/fields/ArchiveDrawloopContractorInstaller__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDrawloopContractorInstaller__c</fullName>
    <description>Stores Drawloop_Contractor_Installer__c reference Id which is used for Archiving Activity</description>
    <label>Archive Drawloop Contractor Installer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>