force-app/main/default/objects/Quote__c/fields/ArchiveDrawloopDistributor__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDrawloopDistributor__c</fullName>
    <description>Stores Drawloop_Distributor__c reference Id which is used for Archiving Activity</description>
    <label>Archive Drawloop Distributor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>