force-app/main/default/objects/Quote__c/fields/ArchiveDrawloopPreparedFor__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDrawloopPreparedFor__c</fullName>
    <description>Stores Drawloop_Prepared_For__c reference Id which is used for Archiving Activity</description>
    <label>Archive Drawloop Prepared For</label>
    <length>18</length>
    <type>Text</type>
</CustomField>