force-app/main/default/objects/Quote__c/fields/ArchiveDrawloopSeAffiliates__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDrawloopSeAffiliates__c</fullName>
    <description>Stores Drawloop_SE_Affiliates__c reference Id which is used for Archiving Activity</description>
    <label>Archive Drawloop SE Affiliates</label>
    <length>18</length>
    <type>Text</type>
</CustomField>