force-app/main/default/objects/Quote__c/fields/ArchiveEndCustomer__c.field-meta.xml
<CustomField>
    <fullName>ArchiveEndCustomer__c</fullName>
    <description>Stores End_Customer__c reference Id which is used for Archiving Activity</description>
    <label>Archive End Customer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>