force-app/main/default/objects/Quote__c/fields/ArchivePurchaserContact__c.field-meta.xml
<CustomField>
    <fullName>ArchivePurchaserContact__c</fullName>
    <description>Stores Purchaser_Contact__c reference Id which is used for Archiving Activity</description>
    <label>Archive Purchaser Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>