force-app/main/default/objects/Quote__c/fields/ArchiveRebate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveRebate__c</fullName>
    <description>Stores Rebate__c reference Id which is used for Archiving Activity</description>
    <label>Archive Rebate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>