force-app/main/default/objects/Quote__c/fields/ArchiveSalesOfficeTerritory1__c.field-meta.xml
<CustomField>
    <fullName>ArchiveSalesOfficeTerritory1__c</fullName>
    <description>Stores SalesOffice_Territory1__c reference Id which is used for Archiving Activity</description>
    <label>Archive SalesOffice Territory1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>