force-app/main/default/objects/Quote__c/fields/ArchiveSourceChangeOrderQuoteId__c.field-meta.xml
<CustomField>
    <fullName>ArchiveSourceChangeOrderQuoteId__c</fullName>
    <description>Stores SourceChangeOrderQuoteId__c reference Id which is used for Archiving Activity</description>
    <label>Archive Source Change Order Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>