force-app/main/default/objects/Quote__c/fields/Auth_TOMV__c.field-meta.xml
<CustomField>
    <fullName>Auth_TOMV__c</fullName>
    <description>Created This field to rollup functionality update - Not Actually used- Created By Anil</description>
    <label>Authorized TOMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>