force-app/main/default/objects/Quote__c/fields/Auth_Tomv_Score__c.field-meta.xml
<CustomField>
    <fullName>Auth_Tomv_Score__c</fullName>
    <label>Deal Manager Authorized TOMV Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>