force-app/main/default/objects/Quote__c/fields/Authorization_Count__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Authorization Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>