force-app/main/default/objects/Quote__c/fields/Authorize_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Eligible__c</fullName>
    <label>If deal can be authorized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>