force-app/main/default/objects/Quote__c/fields/Authorize_Equipment_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Equipment_Sell_Price__c</fullName>
    <formula>Auth_TOMV__c -(MDL_Job_FOB_Amount__c + MDL_Warranty_Amount__c)
/*Authorized_TOMV__c -(Job_FOB_Amount__c + Job_Warranty_Amount__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize Equipment Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>