force-app/main/default/objects/Quote__c/fields/AuthorizedTOMV__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedTOMV__c</fullName>
    <formula>If(OR(Text(Status__c) ==&apos;Authorized&apos;,Text(Status__c) ==&apos;Finalized&apos;),Auth_TOMV__c+CoAuthorizedValueSummary__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized TOMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>