force-app/main/default/objects/Quote__c/fields/AuthorizeQuotePriceFx__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeQuotePriceFx__c</fullName>
    <description>Authorize Quote price in Foreign Exchange Rate</description>
    <label>Authorize Quote Price in Fx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>