force-app/main/default/objects/Quote__c/fields/Auto_SPD_Description__c.field-meta.xml
<CustomField>
    <fullName>Auto_SPD_Description__c</fullName>
    <label>Auto SPD  Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>