force-app/main/default/objects/Quote__c/fields/Availabilty_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Availabilty_Refresh_Date__c</fullName>
    <description>This field stores date and time when the Refresh button on the Availability tab is selected.  Keeping track of when the estimated ship days (lead time) were last refreshed</description>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>