force-app/main/default/objects/Quote__c/fields/Begin_Plant_Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>Begin_Plant_Approval_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Begin Plant Approval Flag</label>
    <type>Checkbox</type>
</CustomField>