force-app/main/default/objects/Quote__c/fields/Begin_Price_Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>Begin_Price_Approval_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field marks the beginning of approval</description>
    <label>Begin Price Approval Flag</label>
    <type>Checkbox</type>
</CustomField>