force-app/main/default/objects/Quote__c/fields/BFO_Oppty_Lines_Synchronization_Message__c.field-meta.xml
<CustomField>
    <fullName>BFO_Oppty_Lines_Synchronization_Message__c</fullName>
    <description>BFO Newton Opp Line Connector Synchronization Data</description>
    <inlineHelpText>BFO Newton Opp Line Connector Synchronization Data</inlineHelpText>
    <label>BFO Oppty Lines Synchronization Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>