force-app/main/default/objects/Quote__c/fields/BFO_QuoteLink_ID__c.field-meta.xml
<CustomField>
    <fullName>BFO_QuoteLink_ID__c</fullName>
    <description>BFO ID of the Quote Link</description>
    <inlineHelpText>BFO ID of the Quote Link</inlineHelpText>
    <label>BFO QuoteLink ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>