force-app/main/default/objects/Quote__c/fields/BFO_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>BFO_Salesforce_ID__c</fullName>
    <description>BFO Quote Link Auto Number</description>
    <inlineHelpText>BFO Quote Link Auto Number</inlineHelpText>
    <label>BFO Salesforce ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>