force-app/main/default/objects/Quote__c/fields/BFO_synchronizationMessage__c.field-meta.xml
<CustomField>
    <fullName>BFO_synchronizationMessage__c</fullName>
    <description>BFO QuoteLink Callout Synchronization Message</description>
    <inlineHelpText>BFO QuoteLink Callout Synchronization Message</inlineHelpText>
    <label>BFO synchronizationMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>