force-app/main/default/objects/Quote__c/fields/bFO_URL__c.field-meta.xml
<CustomField>
    <fullName>bFO_URL__c</fullName>
    <formula>If(ISBLANK(Deal_ID__c) , &apos;&apos; , 
HYPERLINK( &quot;http://wvusstlpa083.nam.gad.schneider-electric.com:8080/dealmgt/cpq_login2.jsp?userid=zpsadmin&amp;password=password&amp;dealID=8a2d05045544356c01554a23045a04e0 &quot;, &quot;http://wvusstlpa083.nam.gad.schneider-electric.com:8080/dealmgt/cpq_login2.jsp?userid=zpsadmin&amp;password=password&amp;dealID=&quot;&amp;Deal_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>bFO URL</label>
    <type>Text</type>
</CustomField>