force-app/main/default/objects/Quote__c/fields/Bid_Bonds__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bonds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Bonds</label>
    <type>Checkbox</type>
</CustomField>