force-app/main/default/objects/Quote__c/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <label>Bid Date</label>
    <type>Date</type>
</CustomField>