force-app/main/default/objects/Quote__c/fields/Bill_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Number__c</fullName>
    <defaultValue>IF($RecordType.Name =&apos;Internal&apos;, &quot;99988&quot;, &quot;&quot;)</defaultValue>
    <label>Primary Purchaser Acc No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>