force-app/main/default/objects/Quote__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Purchaser Account Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Bill_to_Number__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Bill To Name)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>