force-app/main/default/objects/Quote__c/fields/Billing_CO_Attn__c.field-meta.xml
<CustomField>
    <fullName>Billing_CO_Attn__c</fullName>
    <label>Billing C/O Attn</label>
    <length>60</length>
    <type>Text</type>
</CustomField>