force-app/main/default/objects/Quote__c/fields/Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>Billing_Format__c</fullName>
    <label>Billing Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itemized</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Progress Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>