force-app/main/default/objects/Quote__c/fields/billing_frequency__c.field-meta.xml
<CustomField>
    <fullName>billing_frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>