force-app/main/default/objects/Quote__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Format__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Lot Bill</fullName>
            </value>
            <value>
                <fullName>Ship and Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>