force-app/main/default/objects/Quote__c/fields/Billing_Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Billing_Week_Day__c</fullName>
    <label>Billing Week Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>billing_frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>