force-app/main/default/objects/Quote__c/fields/BillingBldg_Floor_Suite__c.field-meta.xml
<CustomField>
    <fullName>BillingBldg_Floor_Suite__c</fullName>
    <label>Bldg,Floor,Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>