force-app/main/default/objects/Quote__c/fields/BillingLandmark__c.field-meta.xml
<CustomField>
    <fullName>BillingLandmark__c</fullName>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>