force-app/main/default/objects/Quote__c/fields/BillingPO_Box__c.field-meta.xml
<CustomField>
    <fullName>BillingPO_Box__c</fullName>
    <label>BillingPO Box</label>
    <length>60</length>
    <type>Text</type>
</CustomField>