force-app/main/default/objects/Quote__c/fields/Billingstate__c.field-meta.xml
<CustomField>
    <fullName>Billingstate__c</fullName>
    <label>Billing state</label>
    <length>60</length>
    <type>Text</type>
</CustomField>