force-app/main/default/objects/Quote__c/fields/billingstreet__c.field-meta.xml
<CustomField>
    <fullName>billingstreet__c</fullName>
    <label>Billing street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>