force-app/main/default/objects/Quote__c/fields/Book_by_Convert_Date__c.field-meta.xml
<CustomField>
    <fullName>Book_by_Convert_Date__c</fullName>
    <label>Book by Convert Date</label>
    <type>Date</type>
</CustomField>