force-app/main/default/objects/Quote__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budegtary</label>
    <type>Checkbox</type>
</CustomField>