force-app/main/default/objects/Quote__c/fields/Budgetary_Price__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Price__c</fullName>
    <label>Budgetary Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>