force-app/main/default/objects/Quote__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <label>Change Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>