force-app/main/default/objects/Quote__c/fields/Change_Order_Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Revision_Number__c</fullName>
    <label>Change Order Revision Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>