force-app/main/default/objects/Quote__c/fields/ChangeQuotePriorStatus__c.field-meta.xml
<CustomField>
    <fullName>ChangeQuotePriorStatus__c</fullName>
    <description>Quote Status at time of Change Order Deactivation</description>
    <label>Change Quote Prior Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>