force-app/main/default/objects/Quote__c/fields/Click_To_Search_Indirect_Account__c.field-meta.xml
<CustomField>
    <fullName>Click_To_Search_Indirect_Account__c</fullName>
    <formula>HYPERLINK( &quot;/apex/searchIndirectAccount?Id=&quot;+ Id,
   &quot;Click To search for Indirect Account&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click To Search Indirect Account_Formula</label>
    <type>Text</type>
</CustomField>