force-app/main/default/objects/Quote__c/fields/Click_To_Search_Indirect_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Click_To_Search_Indirect_Account_URL__c</fullName>
    <defaultValue>&quot;/apex/searchIndirectAccount&quot;</defaultValue>
    <label>Click To Search Indirect Account_URL</label>
    <type>Url</type>
</CustomField>