force-app/main/default/objects/Quote__c/fields/Cloned_By_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Cloned_By_EmailId__c</fullName>
    <label>Cloned By EmailId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>