force-app/main/default/objects/Quote__c/fields/Cloned_from__c.field-meta.xml
<CustomField>
    <fullName>Cloned_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned from</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>