force-app/main/default/objects/Quote__c/fields/ClonedBy__c.field-meta.xml
<CustomField>
    <fullName>ClonedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClonedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClonedBy</relationshipName>
    <type>Lookup</type>
</CustomField>