force-app/main/default/objects/Quote__c/fields/COA_Bldg_Floor_Suite__c.field-meta.xml
<CustomField>
    <fullName>COA_Bldg_Floor_Suite__c</fullName>
    <label>Bldg Floor Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>