force-app/main/default/objects/Quote__c/fields/COA_City__c.field-meta.xml
<CustomField>
    <fullName>COA_City__c</fullName>
    <label>CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>