force-app/main/default/objects/Quote__c/fields/COA_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>