force-app/main/default/objects/Quote__c/fields/COA_County__c.field-meta.xml
<CustomField>
    <fullName>COA_County__c</fullName>
    <label>COUNTRY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>