force-app/main/default/objects/Quote__c/fields/COA_Landmark__c.field-meta.xml
<CustomField>
    <fullName>COA_Landmark__c</fullName>
    <label>LANDMARK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>