force-app/main/default/objects/Quote__c/fields/COA_Name__c.field-meta.xml
<CustomField>
    <fullName>COA_Name__c</fullName>
    <label>NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>