force-app/main/default/objects/Quote__c/fields/COA_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Postal_Code__c</fullName>
    <label>POSTAL CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>