force-app/main/default/objects/Quote__c/fields/COA_State_Province__c.field-meta.xml
<CustomField>
    <fullName>COA_State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>