force-app/main/default/objects/Quote__c/fields/COA_Street__c.field-meta.xml
<CustomField>
    <fullName>COA_Street__c</fullName>
    <label>STREET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>