force-app/main/default/objects/Quote__c/fields/COAfreight_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>COAfreight_Account_Number__c</fullName>
    <label>Freight Account Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>