force-app/main/default/objects/Quote__c/fields/CoAuthorizedValueSummary__c.field-meta.xml
<CustomField>
    <fullName>CoAuthorizedValueSummary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Change Order Authorized Amount (If applied, impact to the Order Value)</description>
    <label>CO Authorized Value Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>