force-app/main/default/objects/Quote__c/fields/CoExtendedListPriceSummary__c.field-meta.xml
<CustomField>
    <fullName>CoExtendedListPriceSummary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Change Order Extended List Price Summation for the Quotation</description>
    <label>CO Extended List Price Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>