force-app/main/default/objects/Quote__c/fields/CoExtendedNormalNetPriceSummary__c.field-meta.xml
<CustomField>
    <fullName>CoExtendedNormalNetPriceSummary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Change Order Extended Normal Net Price Summation for the Quotation</description>
    <label>CO Extended Normal Net Price Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>