force-app/main/default/objects/Quote__c/fields/CoExtendedProfilePriceSummary__c.field-meta.xml
<CustomField>
    <fullName>CoExtendedProfilePriceSummary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Change Order Direct Agreement Profile Price Summation for the Quote</description>
    <label>CO Extended Profile Price Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>