force-app/main/default/objects/Quote__c/fields/Commit_Ship_or_Drawings_YorN__c.field-meta.xml
<CustomField>
    <fullName>Commit_Ship_or_Drawings_YorN__c</fullName>
    <description>Y- Any of the QLItem contains the value in Commit Ship or Drawing Date fields else N</description>
    <formula>IF(ISBLANK(MDL_LineItemCommitDateCheck__c)  &amp;&amp;  ISBLANK(MDL_LineItemDrawingDateCheck__c) , &apos;N&apos;, &apos;Y&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit Ship or Drawings(YorN)</label>
    <type>Text</type>
</CustomField>