force-app/main/default/objects/Quote__c/fields/Community_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Community_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAZ-43: In order to pass a Community&apos;s Eligibility Flag based on Sales Territory.</description>
    <label>Community Eligibility</label>
    <type>Checkbox</type>
</CustomField>