force-app/main/default/objects/Quote__c/fields/Competitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Id__c</fullName>
    <label>Competitor ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>