force-app/main/default/objects/Quote__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>