force-app/main/default/objects/Quote__c/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <description>This field is for capturing the Competitor price value for Quotation.</description>
    <label>Competitor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>