force-app/main/default/objects/Quote__c/fields/Conditions_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the option to include condition of sale in the document</description>
    <label>Conditions of Sale</label>
    <type>Checkbox</type>
</CustomField>