force-app/main/default/objects/Quote__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>SAPE-929  -  Add Purchaser Contact Info to Order Prep Screen</description>
    <label>Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>