force-app/main/default/objects/Quote__c/fields/Contractor_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Sell_Price__c</fullName>
    <label>Contractor Sell Price</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>