force-app/main/default/objects/Quote__c/fields/COR_Name__c.field-meta.xml
<CustomField>
    <fullName>COR_Name__c</fullName>
    <label>COR Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>