force-app/main/default/objects/Quote__c/fields/CoTotalCostSummary__c.field-meta.xml
<CustomField>
    <fullName>CoTotalCostSummary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Change Order Total Cost Summation for the Quotation</description>
    <label>CO Total Cost Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>