force-app/main/default/objects/Quote__c/fields/Count_Quote__c.field-meta.xml
<CustomField>
    <fullName>Count_Quote__c</fullName>
    <description>Used to count quotes in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>