force-app/main/default/objects/Quote__c/fields/Country_Code_SalesOffice_Territory__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_SalesOffice_Territory__c</fullName>
    <label>Country Code(SalesOffice Territory)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>