force-app/main/default/objects/Quote__c/fields/Country_of_Destination_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Destination_Proposal__c</fullName>
    <label>Country of Destination(Proposal)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>