force-app/main/default/objects/Quote__c/fields/Country_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Final_Destination__c</fullName>
    <label>Country of Final Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>