force-app/main/default/objects/Quote__c/fields/CountryofFinalDestinationCode__c.field-meta.xml
<CustomField>
    <fullName>CountryofFinalDestinationCode__c</fullName>
    <label>Country of Final Destination Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>